--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,5 @@ org.gradle.jvmargs=-Xmx2048m
 org.gradle.caching=true
 org.gradle.parallel=true
 kotlin.stdlib.default.dependency=false
+# (all, none, summary) use '--warning-mode all' to show the individual deprecation
+org.gradle.warning.mode=all
