--- a/settings.gradle
+++ b/settings.gradle
@@ -8,7 +8,8 @@ pluginManagement {
 
 plugins {
 	id "com.gradle.enterprise" version "3.10.2"
-	id "io.spring.ge.conventions" version "0.0.10"
+	// 身份认证
+//	id "io.spring.ge.conventions" version "0.0.10"
 }
 
 include "spring-aop"
@@ -55,3 +56,4 @@ settings.gradle.projectsLoaded {
 		}
 	}
 }
+include 'spring-demo'
